# obuparse

./: .gitignore  README.md  obuparse.h  pyproject.toml  setup.py
.github/workflows/: ci.yml  python.yml
docs/: api.rst  cli.rst  conf.py  index.rst  installation.rst  introduction.rst  usage.rst
pyobuparse/: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
pyobuparse/.github/workflows/: main.yml
pyobuparse/docs/: api_reference.rst  cli_reference.rst  conf.py  index.rst  make.bat  usage.rst
pyobuparse/src/pyobuparse/: __init__.py  _c_wrapper.py  _obuparse_module.c  cli.py  parser.py  wrapper.c
pyobuparse/src/pyobuparse/cli/: __init__.py  obudump_py.py
pyobuparse/tests/: test_cli.py  test_enums.py  test_frame_header.py  test_frame_obu.py  test_iter_obus.py  test_metadata_obu.py  test_parser.py  test_sequence_header.py  test_tile_list_obu.py
python/: ffi_builder.py
python/obuparse/: __init__.py  cli.py
python/pyobuparse/: __init__.py
tests/: test_obuparse.py
