[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[project]
name = "pyobuparse"
dynamic = ["version"]
description = "A Python wrapper for the obuparse AV1 OBU parsing library."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Multimedia :: Video",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: C",
]

[project.urls]
Homepage = "https_://github.com/google/pyobuparse" # Placeholder
Repository = "https_://github.com/google/pyobuparse" # Placeholder

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
fallback_version = "0.1.0"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyobuparse*"]
namespaces = false

[project.scripts]
obudump = "pyobuparse.cli.obudump_py:main"
